--- a/requirements.txt
+++ b/requirements.txt
@@ -267,7 +267,7 @@ oscrypto	==	1.3.0
 packaging	==	21.3
 paddle-bfloat	==	0.1.7
 paddleocr	==	2.6
-#paddlepaddle	==	2.4.1
+paddlepaddle	==	2.4.1
 pandas	==	1.4.4
 pandocfilters	==	1.5.0
 parso	==	0.8.3
